[gd_scene load_steps=7 format=3 uid="uid://cbn5gjtbi0sbx"]

[ext_resource type="PackedScene" uid="uid://dr8u34q4dsu0e" path="res://GUI/pause_menu/inventory/scripts/inventory slot.tscn" id="1_f4oge"]
[ext_resource type="Script" uid="uid://ynjlih6lb1d1" path="res://GUI/pause_menu/inventory/item_menu.gd" id="1_ut7us"]
[ext_resource type="Script" uid="uid://cmwqgqjync53n" path="res://GUI/pause_menu/inventory/scripts/inventory_ui.gd" id="2_d27e0"]
[ext_resource type="Resource" uid="uid://cvb6skgx5ne6m" path="res://GUI/pause_menu/inventory/scripts/player_inventory.tres" id="3_88q6a"]

[sub_resource type="Gradient" id="Gradient_88q6a"]
colors = PackedColorArray(0.08922793, 0.14711152, 0.24881959, 1, 0.40067974, 0.40156442, 0.3407496, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yl21o"]
gradient = SubResource("Gradient_88q6a")
fill_from = Vector2(0.509375, 0.009375)
fill_to = Vector2(0.809375, 0.321875)

[node name="ItemMenu" type="CanvasLayer"]
script = ExtResource("1_ut7us")

[node name="ColorRect3" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -192.0
offset_right = 317.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2508037, 0.43893027, 0.72503954, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(319.775, 184.76503)
rotation = 4.712389
scale = Vector2(6.0054946, 10.157235)
texture = SubResource("GradientTexture2D_yl21o")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 326.0
offset_top = 46.0
offset_right = 587.0
offset_bottom = 130.0
grow_horizontal = 2

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
columns = 6
script = ExtResource("2_d27e0")
data = ExtResource("3_88q6a")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/PanelContainer/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/PanelContainer/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/PanelContainer/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/PanelContainer/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/PanelContainer/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 21.0
offset_top = 193.0
offset_right = 282.0
offset_bottom = 277.0
grow_horizontal = 2

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer3"]
layout_mode = 2
columns = 6

[node name="InventorySlot_Curiass" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot2_LeftGaunt" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot3_RightGaunt" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot4_UnderArmor" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot5_Leggings" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot6_Boots" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot7_Charm1" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot8_Charm2" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot9_Charm3" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot10_Ring1" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot11_Ring2" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot12_Ring3" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="InventorySlot13_Weapon" parent="Control/PanelContainer3/GridContainer" instance=ExtResource("1_f4oge")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 42.0
offset_top = 12.0
offset_right = 207.0
offset_bottom = 148.0
grow_vertical = 2

[node name="Button_Save" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Equip"

[node name="Button_Load" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Items"

[node name="Button_Spells" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Spells"

[node name="Button_Stats" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Stats"

[node name="PanelContainer2" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 326.0
offset_top = 143.0
offset_right = 587.0
offset_bottom = 227.0
grow_horizontal = 2
scale = Vector2(1, 1.1600001)

[node name="ItemDescription" type="Label" parent="Control"]
layout_mode = 0
offset_left = 355.0
offset_top = 167.0
offset_right = 591.0
offset_bottom = 236.0
scale = Vector2(1, 1.1600001)
theme_override_font_sizes/font_size = 8
autowrap_mode = 2

[node name="ItemName" type="Label" parent="Control"]
layout_mode = 0
offset_left = 355.0
offset_top = 148.99998
offset_right = 607.354
offset_bottom = 217.99998
scale = Vector2(1, 1.1600001)
theme_override_font_sizes/font_size = 7
autowrap_mode = 2

[node name="ItemQuality" type="Label" parent="Control"]
layout_mode = 0
offset_left = 574.0
offset_top = 149.0
offset_right = 599.0
offset_bottom = 218.0
scale = Vector2(1, 1.1600001)
theme_override_font_sizes/font_size = 7
autowrap_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4
